# authswap

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: rust-pypi-wheels.yml
demo/: cockpit_demo  cpa_demo  sub2api_demo
src/: main.rs
