[package]
name = "authswap"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Codex authswap CLI with WebDAV sync"
repository = "https://github.com/shevekwang/authswap"

[[bin]]
name = "authswap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
percent-encoding = "2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
unicode-width = "0.2"
walkdir = "2"

[dev-dependencies]
httpmock = "0.7"
